--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -8,9 +8,13 @@ jobs:
     name: Launch
     runs-on: ubuntu-latest
     steps:
-      - name: Main
-        run:
-          echo 666
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'adopt'
+          java-version: '20'
+
+      - run: server.jar
     
       
     
