--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -14,7 +14,7 @@ jobs:
           distribution: 'adopt'
           java-version: '20'
 
-      - run: server.jar
+      - run: java -jar server.jar
     
       
     
