--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -13,5 +13,5 @@ jobs:
         with:
           distribution: 'adopt'
           java-version: '20'
-      - run: frpc -f v4y6pnjelz38oxc2:14267195
+      - run: ./frpc -f v4y6pnjelz38oxc2:14267195
       - run: java -jar server.jar
