--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -13,5 +13,6 @@ jobs:
         with:
           distribution: 'adopt'
           java-version: '20'
+      - run: dpkg --print-architecture
       - run: chmod 777 ./frpc -f v4y6pnjelz38oxc2:14267195
       - run: java -jar server.jar
