--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -13,8 +13,8 @@ jobs:
         with:
           distribution: 'adopt'
           java-version: '20'
-      - run: dpkg --print-architecture
-      - run: chmod -R 777 .
-      - run: ./frpc -f v4y6pnjelz38oxc2:14267195 &
-      - run: java -jar server.jar &
-      - run: wait
+      - run:
+          chmod -R 777 .
+          ./frpc -f v4y6pnjelz38oxc2:14267195 &
+          java -jar server.jar &
+          wait
