--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: Automated Change
-          file_pattern: world/*
+          file_pattern: /*
           repository: .
           commit_user_name: Poteitou57
           commit_user_email: 412155684@qq.com
