--- a/server.properties
+++ b/server.properties
@@ -30,14 +30,14 @@ max-chained-neighbor-updates=1000000
 max-players=20
 max-tick-time=60000
 max-world-size=29999984
-motd=§eMinecraft 1.20.4 Fascinating\n§r§kaaa§r§bEnjoy it SIR\!§kaaa
+motd=§eMinecraft 1.20.4 Fascinating\n§bEnjoy it SIR!
 network-compression-threshold=256
 online-mode=false
 op-permission-level=4
 player-idle-timeout=0
 prevent-proxy-connections=false
 pvp=true
-query.port=25565
+query.port=25575
 rate-limit=0
 rcon.password=Infinite_World000
 rcon.port=25565
