--- a/server.properties
+++ b/server.properties
@@ -7,7 +7,7 @@ broadcast-rcon-to-ops=true
 difficulty=hard
 enable-command-block=true
 enable-jmx-monitoring=false
-enable-query=true
+enable-query=false
 enable-rcon=true
 enable-status=true
 enforce-secure-profile=true
