--- a/server.properties
+++ b/server.properties
@@ -30,7 +30,7 @@ max-chained-neighbor-updates=1000000
 max-players=20
 max-tick-time=60000
 max-world-size=29999984
-motd=§eMinecraft 1.20.4 Fascinating\n§bEnjoy it SIR\!
+motd=§eMinecraft 1.20.4 Fascinating\n§bEnjoy it SIR!!!
 network-compression-threshold=256
 online-mode=false
 op-permission-level=4
@@ -40,7 +40,7 @@ pvp=true
 query.port=25565
 rate-limit=0
 rcon.password=Infinite_World000
-rcon.port=25575
+rcon.port=25565
 require-resource-pack=false
 resource-pack=
 resource-pack-id=
