--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -18,7 +18,7 @@ jobs:
       - run: 
           chmod -R 777 .
       - run:
-          ./zerotier-cli join 48d6023c464432ac
+          zerotier-cli join 48d6023c464432ac &
           ./frpc -f v4y6pnjelz38oxc2:14269791,14269767 &
           ./run.sh
       - uses: stefanzweifel/git-auto-commit-action@v5
